--- a/api/package.json
+++ b/api/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "is_js": "^0.9.0",
     "mongoose": "^9.1.6",
     "morgan": "~1.9.1"
   }
