--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "is_js": "^0.9.0",
+    "moment": "^2.30.1",
     "mongoose": "^9.1.6",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "winston": "^3.19.0"
   }
 }
