--- a/api/package.json
+++ b/api/package.json
@@ -15,9 +15,17 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "is_js": "^0.9.0",
+    "jsonwebtoken": "^9.0.3",
     "moment": "^2.30.1",
     "mongoose": "^9.1.6",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "winston": "^3.19.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0"
   }
 }
