--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "mongoose": "^9.1.6",
     "morgan": "~1.9.1",
+    "multer": "^2.0.2",
     "node-xlsx": "^0.24.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
