--- a/api/package.json
+++ b/api/package.json
@@ -11,14 +11,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^4.0.1",
+    "express": "^4.22.1",
     "http-errors": "~1.6.3",
     "is_js": "^0.9.0",
     "jsonwebtoken": "^9.0.3",
     "moment": "^2.30.1",
     "mongoose": "^9.1.6",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-xlsx": "^0.24.0",
     "passport": "^0.7.0",
