--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
     "http-errors": "~1.6.3",
     "is_js": "^0.9.0",
     "jsonwebtoken": "^9.0.3",
@@ -23,6 +24,7 @@
     "node-xlsx": "^0.24.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "rate-limit-mongo": "^2.3.2",
     "winston": "^3.19.0"
   },
   "devDependencies": {
