refactor: merge roles and role_privileges into single page and complete listing

--- a/api/.env.example
+++ b/api/.env.example
@@ -3,3 +3,5 @@ CONNECTION_STRING=
 PORT=3000
 JWT_KEY=
 UPLOAD_FILE_PATH=D:\Software\NodeJS\node-base-project\api\tmp
+SUPER_ADMIN_ID=
+SUPER_ADMIN_ROLE_NAME=super-admin
