feat: implement idempotent super admin seed with role and privileges

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,11 @@
 LOG_LEVEL="debug"
-CONNECTION_STRING=
+CONNECTION_STRING="mongodb://localhost:27017/node_base_project"
 PORT=3000
-JWT_KEY=
+JWT_KEY="apple"
 UPLOAD_FILE_PATH=D:\Software\NodeJS\node-base-project\api\tmp
-SUPER_ADMIN_ID=
 SUPER_ADMIN_ROLE_NAME=super-admin
+SUPER_ADMIN_EMAIL=super_admin@gmail.com
+SUPER_ADMIN_NAME=admin
+SUPER_ADMIN_SURNAME=admin
+SUPER_ADMIN_PASSWORD=admin1234
+SUPER_ADMIN_PHONE=5555555555
